samples/_failures_safe/1761083880_2fb1a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5d1bfbe.c: In function ‘parser_init’:
./samples/SAFE/__tmp_d5d1bfbe.c:156:11: error: expected ‘;’ at end of input
  156 |     parser
      |           ^
      |           ;
./samples/SAFE/__tmp_d5d1bfbe.c:156:5: error: expected declaration or statement at end of input
  156 |     parser
      |     ^~~~~~
